@@ -105,3 +105,8 @@ New Turtle version
 [B]Version v1.3.8.3[/B]
 
 - Fixed DT source again
+
+[B]Version v1.3.8.4[/B]
+
+- Fixed DR source video links
+
